# AVR_interfacing_UsingCmake

./: README.md
1-Work_Space/Lab1/Task1_DIO_LED_BLINK/: CMakeLists.txt
1-Work_Space/Lab1/Task2_Button_controlled_led/: CMakeLists.txt
1-Work_Space/Lab2/Task1_DIO_ledControlledsystem/: main.c
2-COTS/01-PRIVATE/Inc/: MDIO_PRIVATE.h
2-COTS/02-MCAL/1-DIO/: CMakeLists.txt
2-COTS/02-MCAL/1-DIO/Inc/: MDIO.h
2-COTS/02-MCAL/1-DIO/Src/: MDIO_config.c
App/Lab1/: CMakeLists.txt
App/Lab2/: CMakeLists.txt
App/Lab2/src/: main.c
App/withoutDrivers/Task1_DIO_LED_BLINK/: main.c
App/withoutDrivers/Task2_Button_controlled_led/: main.c
App/withoutDrivers/Task3_Traffic_Light/: CMakeLists.txt  main.c
App/withoutDrivers/Task4_4bit_binary_counter/: CMakeLists.txt  main.c
Components/MCAL/Dio/inc/: MDIO_config.h
Components/MCAL/MDIO/: CMakeLists.txt
Components/MCAL/MPORT/: CMakeLists.txt
Components/MCAL/MPORT/inc/: MPORT.h  MPORT_PRIVATE.h  MPORT_config.h
Components/MCAL/MPORT/src/: MPORT.c  MPORT_config.c
TrialCmake/App/Lab1/: CMakeLists.txt
TrialCmake/App/Lab1/src/: main.c
TrialCmake/Components/MCAL/Adc/: CMakeLists.txt
TrialCmake/Components/MCAL/Dio/src/: MDIO.c
TrialCmake/Components/common/inc/: BIT_MATH.h
